--- a/src/main/webapp/relatorio/resl-user-jsp.jrxml
+++ b/src/main/webapp/relatorio/resl-user-jsp.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.16.0.final using JasperReports Library version 6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
+<!-- Created with Jaspersoft Studio version 6.20.5.final using JasperReports Library version 6.20.5-3efcf2e67f959db3888d79f73dde2dbd7acb4f8e  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="resl-user-jsp" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="836d1fb8-39af-43b9-8103-91ee1a160f51">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="PARAM_SUB_REPORT" class="java.lang.String"/>
@@ -98,7 +98,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="26"/>
 				</textElement>
-				<text><![CDATA[Relatório de Usuário]]></text>
+				<text><![CDATA[Employee Report]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -111,13 +111,13 @@
 				<reportElement x="4" y="0" width="97" height="19" uuid="8c07be89-af17-4f01-955d-dfc977b0b620">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="72bc93bf-e43f-43a5-8670-19069226a45e"/>
 				</reportElement>
-				<text><![CDATA[Nome:]]></text>
+				<text><![CDATA[Name:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="370" y="0" width="100" height="19" uuid="4a5072e7-afc5-4379-b947-ad64783183d8">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6972260a-d756-4dcb-95d3-1e2adff303f6"/>
 				</reportElement>
-				<text><![CDATA[Data Nascimento:]]></text>
+				<text><![CDATA[Birthday:]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -134,7 +134,7 @@
 		<band height="38">
 			<textField pattern="d/M/yyyy">
 				<reportElement x="350" y="10" width="199" height="20" uuid="aeb66fa1-833a-4210-8b76-06686e6cbf75"/>
-				<textFieldExpression><![CDATA["Impresso em: " + new java.util.Date()]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Printed on: " + new java.util.Date()]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
