--- a/src/main/webapp/relatorio/resl-user-jsp.jrxml
+++ b/src/main/webapp/relatorio/resl-user-jsp.jrxml
@@ -77,12 +77,18 @@
 					<reportElement x="4" y="0" width="256" height="20" uuid="cb5fff82-2c01-4d0a-a7a9-8ac791031da8">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="db6dab0d-79ac-4887-b152-684b885bf831"/>
 					</reportElement>
+					<textElement>
+						<font fontName="SansSerif" size="10" isBold="false"/>
+					</textElement>
 					<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
 				</textField>
 				<textField pattern="d/M/yyyy" isBlankWhenNull="true">
 					<reportElement x="370" y="2" width="178" height="18" uuid="b627ce15-f325-459d-a621-5eda317d52e0">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="96a25f43-36ed-4bf2-89ce-e60e46f1bf22"/>
 					</reportElement>
+					<textElement>
+						<font fontName="SansSerif" size="10" isBold="false"/>
+					</textElement>
 					<textFieldExpression><![CDATA[$F{dataNascimento}]]></textFieldExpression>
 				</textField>
 				<line>
@@ -96,7 +102,7 @@
 			<staticText>
 				<reportElement x="4" y="0" width="545" height="60" uuid="230edd93-78df-490c-b0e3-a09ef8250ec0"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="26"/>
+					<font fontName="SansSerif" size="26" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Employee Report]]></text>
 			</staticText>
@@ -111,12 +117,18 @@
 				<reportElement x="4" y="0" width="97" height="19" uuid="8c07be89-af17-4f01-955d-dfc977b0b620">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="72bc93bf-e43f-43a5-8670-19069226a45e"/>
 				</reportElement>
+				<textElement>
+					<font fontName="SansSerif" size="10" isBold="false"/>
+				</textElement>
 				<text><![CDATA[Name:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="370" y="0" width="100" height="19" uuid="4a5072e7-afc5-4379-b947-ad64783183d8">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6972260a-d756-4dcb-95d3-1e2adff303f6"/>
 				</reportElement>
+				<textElement>
+					<font fontName="SansSerif" size="10" isBold="false"/>
+				</textElement>
 				<text><![CDATA[Birthday:]]></text>
 			</staticText>
 		</band>
@@ -134,6 +146,9 @@
 		<band height="38">
 			<textField pattern="d/M/yyyy">
 				<reportElement x="350" y="10" width="199" height="20" uuid="aeb66fa1-833a-4210-8b76-06686e6cbf75"/>
+				<textElement>
+					<font fontName="SansSerif" size="10" isBold="false"/>
+				</textElement>
 				<textFieldExpression><![CDATA["Printed on: " + new java.util.Date()]]></textFieldExpression>
 			</textField>
 		</band>
